Add history feature and fix loading state bug
- Fix: Loading spinner no longer shows on popup open
- Add history view with clock icon button
- Store last 50 snapshots in local storage
- History shows title, relative time, copy/open buttons
- Add clear history functionality

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,7 +3,7 @@
   "name": "Page Snapshot",
   "version": "1.0.0",
   "description": "Capture any page exactly as you see it and share a public link",
-  "permissions": ["activeTab", "scripting"],
+  "permissions": ["activeTab", "scripting", "storage"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
